--- a/main.tex
+++ b/main.tex
@@ -13,13 +13,13 @@
 \usepackage[ruled,vlined]{algorithm2e}
 \usepackage{fancyvrb}
 \usepackage{yfonts}
+\usepackage{dsfont}
 
 \usepackage{wrapfig}
 \usepackage{tikz}
 %\input{../tikz.conf}
 
 \usetikzlibrary{bayesnet}
-\usepackage{caption}
 
 %%%%%%%%%%% Box 
 \usepackage{calc}%    For the \widthof macro
