--- a/models.tex
+++ b/models.tex
@@ -133,14 +133,12 @@ The second version is a purely generative version that solely relies on the hype
 \end{equation}
 
 \subsection{Note on model terminology}
-As mentioned in the introduction, the ILFM and IMMSB models are often classified in the literature in a more general set of models, respectively called the latent feature models and the latent class models. In this paper, when referring to matrix $F$ (or row $f_i$) in the general case, we will adopt the terminology  \emph{latent feature} without distinctions for both models. The concept of mixed-membership means that nodes of the networks can belongs to several (latent) \emph{object}. The nature to this object and the way of how each of this object relate to each other is determined by the priors of the models. In order to avoid the ambiguity of calling this \emph{object} by either a class, a feature, a characteristic or worse a community. To avoid those ambiguity we will call this \emph{object} a \textbf{block}. This the common intuition behind the latent feature whether they arise from the Dirichlet Process of the IMMSB or the Indian Buffet process of the ILFM. Note that a block, refers to its original introduction in the (stochastic) Blockmodel,  where precisely IMMSB and ILFM, relax the uniqueness of the membership, in a soft way in the former, and in a hard way for the second. A block refer to notion of structural community in social networks \textcolor{red}{christine tu as la reférence ??} which also refer to the notion of structural equivalence (or synonymously stochastic equivalence) \cite{goldenberg2010survey}.
+As mentioned in the introduction, the ILFM and IMMSB models are often classified in the literature in a more general set of models, respectively called the latent feature models and the latent class models. In this paper, when referring to the matrix $\mat{F}$ (or row $\mat{f}_i$) in the general case, we will adopt the terminology  \emph{latent feature} without distinctions for both models. The concept of mixed-membership means that nodes of the networks can belongs to several (latent) \emph{object}. The nature to this object and the way of how each of those objects relate to each other is determined by the priors of the models. In order to avoid the ambiguity of calling this \emph{object} by either a class, a feature, a characteristic or worse a community,  we will call this \emph{object} a \textbf{block}. This the common intuition behind the latent feature whether they arise from the Dirichlet Process of the IMMSB or the Indian Buffet process of the ILFM. Note that a block, refers to its original introduction in the (stochastic) Blockmodel,  where precisely IMMSB and ILFM relax the uniqueness of the membership. In a soft way in the former, and in a hard way for the second. A block refer to notion of structural community in social networks \textcolor{red}{christine tu as la reférence ??} which also refer to the notion of structural equivalence (or synonymously stochastic equivalence) \cite{goldenberg2010survey}.
 
-Finally note that the notion of block will be especially usfull to define the local preferential attachment in \ref{def:burst-soc-net}.
+Finally note that the notion of block will be especially useful to interpret the definitions of homophily and local preferential attachment in the next sections.
 
 \subsection{Note on model performance}
 
-Both ILFM and IMMSB are based on a latent representation of each node in the network (matrix $\mat{F}$) and a latent metric (matrix $\mat{\Phi}$). However, in the case of ILFM, this representation takes the form of a binary vector, whereas in IMMSB it is a vector of proportion. Interpreting the latent feature dimensions as characteristics or classes, one can view ILFM as performing a hard assignment whereas IMMSB performs a soft assignment. 
-
-ILFM was introduced as performing better than MMSB (parametric version). However, with MCMC inference strategy, ILFM has higher time complexity due to its non-conjugacy that requires a matrix product to compute the likelihood of the model. Furthermore, the complexity of IMMSB is still $O(E^2K^2)$ (against $O(E^4K)$ for ILFM with particular optimization), which means that this inference scheme  does not allow to handle large size data. However, this complexity limit can be overcome  to work with millions of nodes by using a inference strategy that relies on variational inference \cite{gopalan2013efficient}.\\
+ILFM was introduced as performing better than MMSB (parametric version). However, with MCMC inference strategy, ILFM has higher time complexity due to its non-conjugacy that requires a matrix product to compute the likelihood of the model. Furthermore, the complexity of IMMSB is still $O(E^2K^2)$ (against $O(E^4K)$ for ILFM with particular optimization), which means that this inference scheme  does not allow to handle large size data. However, this complexity limit can be overcome  to work with millions of nodes by using an inference strategy that relies on variational inference \cite{gopalan2013efficient}.\\
 
  We now turn to the two questions we asked, considering the homophily effect first.
